tests/baselines/reference/exportAssignTypes.errors.txt
tests/cases/conformance/externalModules/expString.ts(2,1): error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.


==== tests/cases/conformance/externalModules/consumer.ts (0 errors) ====
    import iString = require('./expString');
    var v1: string = iString;
    
    import iNumber = require('./expNumber');
    var v2: number = iNumber;
    
    import iBoolean = require('./expBoolean');
    var v3: boolean = iBoolean;
    
    import iArray = require('./expArray');
    var v4: Array<number> = iArray;
    
    import iObject = require('./expObject');
    var v5: Object = iObject;
    
    import iAny = require('./expAny');
    var v6 = iAny;
    
    import iGeneric = require('./expGeneric');
    var v7: {<x>(p1: x): x} = iGeneric;
    
==== tests/cases/conformance/externalModules/expString.ts (1 errors) ====
    var x = "test";
    export = x;
    ~~~~~~~~~~~
!!! error TS1148: Cannot compile modules unless the '--module' flag is provided. Consider setting the 'module' compiler option in a 'tsconfig.json' file.
    
==== tests/cases/conformance/externalModules/expNumber.ts (0 errors) ====
    var x = 42;
    export = x;
    
==== tests/cases/conformance/externalModules/expBoolean.ts (0 errors) ====
    var x = true;
    export = x;
    
==== tests/cases/conformance/externalModules/expArray.ts (0 errors) ====
    var x = [1,2];
    export = x;
    
==== tests/cases/conformance/externalModules/expObject.ts (0 errors) ====
    var x = { answer: 42, when: 1776};
    export = x;
    
==== tests/cases/conformance/externalModules/expAny.ts (0 errors) ====
    var x;
    export = x;
    
==== tests/cases/conformance/externalModules/expGeneric.ts (0 errors) ====
    function x<T>(a: T){
    	return a;
    }
    export = x;
    